[gd_scene load_steps=13 format=2]

[ext_resource path="res://Code/Mundo.gd" type="Script" id=1]
[ext_resource path="res://Sprites/fondo.png" type="Texture" id=2]
[ext_resource path="res://Scenes/proyectil.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/asteroid.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/mover.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fonts/OriginTech personal use.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Sounds/rock_destruction.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/LASRLIT2.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/spacesound-7547.mp3" type="AudioStream" id=10]

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 7 )

[node name="Mundo" type="Node2D"]
script = ExtResource( 1 )
asteroid = ExtResource( 5 )

[node name="Fondo" type="Sprite" parent="."]
modulate = Color( 1, 0.976471, 0.796078, 1 )
position = Vector2( 646, 481 )
scale = Vector2( 0.137222, 0.137222 )
texture = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.006
anchor_right = 1.0
anchor_bottom = 0.552
margin_left = 600.0
margin_top = 55.0
margin_right = 680.0
margin_bottom = 105.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Proyectil" parent="." instance=ExtResource( 3 )]
position = Vector2( 1, 0 )
collision_layer = 2
collision_mask = 2
speed = 400

[node name="Llave" parent="." instance=ExtResource( 6 )]
rotation = 1.51669

[node name="KinematicBody2D" parent="." instance=ExtResource( 5 )]

[node name="TimerAsteroid" type="Timer" parent="."]

[node name="Score" type="Timer" parent="."]

[node name="TimerStart" type="Timer" parent="."]
one_shot = true

[node name="RockDestruction" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -5.087

[node name="LaserAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
pitch_scale = 0.85

[node name="OST" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="Control" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 640.0
margin_top = 496.0
margin_right = 640.0
margin_bottom = 496.0

[connection signal="fuera" from="Proyectil" to="." method="_on_Proyectil_fuera"]
[connection signal="area_entered" from="Llave" to="." method="_on_Llave_area_entered"]
[connection signal="body_entered" from="Llave" to="." method="_on_Llave_body_entered"]
[connection signal="timeout" from="TimerAsteroid" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Score" to="." method="_on_Score_timeout"]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
[connection signal="boton_presionado" from="Control" to="." method="_on_Control_boton_presionado"]
[connection signal="nueva_partida" from="Control" to="." method="_on_Control_nueva_partida"]
